# ufiber

./: CMakeLists.txt  README.md  azure-pipelines.yml  ufiberConfig.cmake  vcpkg.json
.github/workflows/: hosted-latest-vcpkg.yml
examples/: CMakeLists.txt  echo.cpp
include/ufiber/: ufiber.hpp
include/ufiber/detail/: config.hpp  monotonic_allocator.hpp  ufiber.hpp
include/ufiber/impl/: ufiber.hpp  ufiber.ipp
tests/: CMakeLists.txt
tests/ufiber/: common.hpp  spawn.cpp  spawn_discard.cpp  spawn_threaded.cpp  yield_token_conversion.cpp
tools/: coverage.sh  get_boost.sh
